generalized :8080 as local dev, fixed IE profpic shift

--- a/docroot/css/mor.css
+++ b/docroot/css/mor.css
@@ -119,6 +119,7 @@ body {
 .srchpic { width:30px; height:30px; vertical-align:middle; }
 .reviewbadge { width:30px; height:30px; vertical-align:middle; }
 .revtypeselectiondiv { padding:15px; font-size:x-large; }
+/* width dynamically modified in profile.styleShout */
 .shoutout { width:200px; height:80px; 
   font-family:"Verdana", "Arial", "Helvetica", sans-serif;
   font-size:small; }
@@ -131,6 +132,7 @@ body {
  }
 #proftabsdiv a { padding: 0 1em; }
 .unselectedTab { border-bottom: 1px solid #666; }
+#profdisptable { margin-left:8%; }
 .headingtxt { font-size:large; font-weight:bold; text-align:center; }
 .formstyle { font-size:small; }
 .textright { text-align:right; }
